--- a/C_L_Operators/html/c_l_operators.html
+++ b/C_L_Operators/html/c_l_operators.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Jakub Kruszyński">
     <title>C L Operators</title>
-    <link rel="stylesheet" href="../css/if_st.css">
+    <link rel="stylesheet" href="../css/c_l_operators.css">
 </head>
 <body>
     <h1>Couple Basics about JS - Compharision and Logical Operators</h1>
@@ -34,8 +34,8 @@
             <li>|| - or - to make one step possibility of occurence of one condition in comparison.</li>
             <p>Code is in .js file, Here you can set the hight you are interestec.</p> <hr>
 
-            <label for="height"> Insert the height you want to compare</label> <br>
-            <input type="text" name="height" id="bheight">
+            <label for="height"> Insert the building height you want to compare and click tne "check button.</label> <br>
+            <input type="number" name="height" id="bheight">m 
             <input type="button" value="Check" id="check">
         </ol>
 
@@ -44,6 +44,6 @@
 
 
 
-    <script src="../scripts/if_st.js"></script>
+    <script src="../scripts/c_l_operators.js"></script>
 </body>
 </html>
