--- a/loops/html/loops.html
+++ b/loops/html/loops.html
@@ -15,9 +15,8 @@
         <p>There is couple types of loops in (not only) JavaScript.</p>
         <hr>
         <h2>While loops</h2> <hr>
-        <p>While loop is a loop which is doing coded program until our conditions will be finished.</p>
-        
-        </ol>
+        <p>While loop is a loop which is doing coded program until our conditions will be finished - check the .js file.</p>
+
 
     </div>
 
