Final status of loops

--- a/loops/html/loops.html
+++ b/loops/html/loops.html
@@ -14,8 +14,14 @@
     <div id="content">
         <p>There is couple types of loops in (not only) JavaScript.</p>
         <hr>
-        <h2>While loops</h2> <hr>
-        <p>While loop is a loop which is doing coded program until our conditions will be finished - check the .js file.</p>
+        <h2>While loops</h2> <br>
+        <p>While loop is a loop which is doing coded prgram until our conditions will be finished - check the .js file.</p> <hr>
+        <h2>For Loops</h2> <br>
+        <p>For loops - are used when we want to check defined staff as condition until they ends - good to use with arrays - check the .js file.</p> <hr>
+        <h2>Do while Loops</h2> <br>
+        <p>Do while loops - are used similar to while loops but firstly we need to declare what we need to do and later until when/while - check the .js file.
+            The do while loops were used in really first versions now they are not used.
+        </p> <hr>
 
 
     </div>
