--- a/loops/html/loops.html
+++ b/loops/html/loops.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/loops.css">
 </head>
 <body>
-    <h1>Couple Basics about JS - Loops</h1>
+    <h1>Couple Basics about JS - Loops + some additional informations about break and continue keywords.</h1>
     <div id="content">
         <p>There is couple types of loops in (not only) JavaScript.</p>
         <hr>
@@ -22,7 +22,17 @@
         <p>Do while loops - are used similar to while loops but firstly we need to declare what we need to do and later until when/while - check the .js file.
             The do while loops were used in really first versions now they are not used.
         </p> <hr>
-
+        <p>Break and continue kewords are words which are breaking loops for good - check .js file.</p> <hr>
+        <h2>Some practical examples of loops - change the bookmark in dev tools to Elements.</h2>
+        <br>
+        <div id="links">
+            <a href="#">Link first</a>
+            <a href="#">Link second</a>
+            <a href="#">Link third</a>
+            <a href="#">Link fourth</a>
+            <a href="#">Link fifth</a>
+            <a href="#">Link sixth</a>
+        </div> <hr>
 
     </div>
 
